api changes to support etvcli
