# ErsatzTV.Application/MediaCollections/Queries/GetAllSmartCollectionsForApi.cs
@@ -1,0 +1,5 @@
+﻿using ErsatzTV.Core.Api.SmartCollections;
+
+namespace ErsatzTV.Application.MediaCollections;
+
+public record GetAllSmartCollectionsForApi : IRequest<List<SmartCollectionResponseModel>>;
