# ErsatzTV/wwwroot/openapi/v1.json
@@ -5,6 +5,44 @@
     "version": "1.0.0"
   },
   "paths": {
+    "/api/channels": {
+      "get": {
+        "tags": [
+          "Channel"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/ChannelResponseModel"
+                  }
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/ChannelResponseModel"
+                  }
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/ChannelResponseModel"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/channels/{channelNumber}/playout/reset": {
       "post": {
         "tags": [
@@ -199,29 +237,169 @@
         }
       }
     },
-    "/api/version": {
+    "/api/collections/smart": {
       "get": {
         "tags": [
-          "Version"
+          "SmartCollection"
         ],
-        "summary": "Get version",
+        "operationId": "GetSmartCollections",
         "responses": {
           "200": {
             "description": "OK",
             "content": {
               "text/plain": {
                 "schema": {
-                  "type": "string"
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/SmartCollectionResponseModel"
+                  }
                 }
               },
               "application/json": {
                 "schema": {
-                  "type": "string"
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/SmartCollectionResponseModel"
+                  }
                 }
               },
               "text/json": {
                 "schema": {
-                  "type": "string"
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/SmartCollectionResponseModel"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/collections/smart/new": {
+      "post": {
+        "tags": [
+          "SmartCollection"
+        ],
+        "operationId": "CreateSmartCollection",
+        "requestBody": {
+          "content": {
+            "application/json-patch+json": {
+              "schema": {
+                "$ref": "#/components/schemas/CreateSmartCollection"
+              }
+            },
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/CreateSmartCollection"
+              }
+            },
+            "text/json": {
+              "schema": {
+                "$ref": "#/components/schemas/CreateSmartCollection"
+              }
+            },
+            "application/*+json": {
+              "schema": {
+                "$ref": "#/components/schemas/CreateSmartCollection"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/api/collections/smart/update": {
+      "put": {
+        "tags": [
+          "SmartCollection"
+        ],
+        "operationId": "UpdateSmartCollection",
+        "requestBody": {
+          "content": {
+            "application/json-patch+json": {
+              "schema": {
+                "$ref": "#/components/schemas/UpdateSmartCollection"
+              }
+            },
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/UpdateSmartCollection"
+              }
+            },
+            "text/json": {
+              "schema": {
+                "$ref": "#/components/schemas/UpdateSmartCollection"
+              }
+            },
+            "application/*+json": {
+              "schema": {
+                "$ref": "#/components/schemas/UpdateSmartCollection"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/api/collections/smart/delete/{id}": {
+      "delete": {
+        "tags": [
+          "SmartCollection"
+        ],
+        "operationId": "DeleteSmartCollection",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/api/version": {
+      "get": {
+        "tags": [
+          "Version"
+        ],
+        "summary": "Get version",
+        "operationId": "GetVersion",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/CombinedVersion"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/CombinedVersion"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/CombinedVersion"
                 }
               }
             }
@@ -232,6 +410,77 @@
   },
   "components": {
     "schemas": {
+      "ChannelResponseModel": {
+        "required": [
+          "id",
+          "number",
+          "name",
+          "fFmpegProfile",
+          "language",
+          "streamingMode"
+        ],
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "number": {
+            "type": "string",
+            "nullable": true
+          },
+          "name": {
+            "type": "string",
+            "nullable": true
+          },
+          "fFmpegProfile": {
+            "type": "string",
+            "nullable": true
+          },
+          "language": {
+            "type": "string",
+            "nullable": true
+          },
+          "streamingMode": {
+            "type": "string",
+            "nullable": true
+          }
+        }
+      },
+      "CombinedVersion": {
+        "required": [
+          "apiVersion",
+          "appVersion"
+        ],
+        "type": "object",
+        "properties": {
+          "apiVersion": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "appVersion": {
+            "type": "string",
+            "nullable": true
+          }
+        }
+      },
+      "CreateSmartCollection": {
+        "required": [
+          "query",
+          "name"
+        ],
+        "type": "object",
+        "properties": {
+          "query": {
+            "type": "string",
+            "nullable": true
+          },
+          "name": {
+            "type": "string",
+            "nullable": true
+          }
+        }
+      },
       "HlsSessionModel": {
         "required": [
           "channelNumber",
@@ -274,10 +523,57 @@
             "default": false
           }
         }
+      },
+      "SmartCollectionResponseModel": {
+        "required": [
+          "id",
+          "name",
+          "query"
+        ],
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "name": {
+            "type": "string",
+            "nullable": true
+          },
+          "query": {
+            "type": "string",
+            "nullable": true
+          }
+        }
+      },
+      "UpdateSmartCollection": {
+        "required": [
+          "id",
+          "name",
+          "query"
+        ],
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "name": {
+            "type": "string",
+            "nullable": true
+          },
+          "query": {
+            "type": "string",
+            "nullable": true
+          }
+        }
       }
     }
   },
   "tags": [
+    {
+      "name": "Channel"
+    },
     {
       "name": "Channels"
     },
@@ -289,6 +585,9 @@
     },
     {
       "name": "Sessions"
+    },
+    {
+      "name": "SmartCollection"
     },
     {
       "name": "Version"
